fix(header): removed collapse animation

--- a/src/app/search-header/search-header.component.css
+++ b/src/app/search-header/search-header.component.css
@@ -55,3 +55,9 @@ img {
         margin-left: 20px;    
     }
 }
+
+.collapsing {
+    -webkit-transition: none;
+    transition: none;
+    display: none;
+}
